--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,7 +26,7 @@ services:
     ports:
       - "8000:8000"
     command: >
-     python src/beam_app/pipeline.py
+     python src/beam_app/covid_tweets_pipeline.py
       --runner=DirectRunner
       --tcp_host=twitter-simulator
       --tcp_port=5555
